--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "express-list-endpoints": "^6.0.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.2.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1"
